Modification de 'collection' à 'rating' + Mise à jour de la doc
