# Ratings/internal/controllers/ratings/get_rating.go
@@ -1,28 +1,28 @@
-package collections
+package ratings
 
 import (
 	"encoding/json"
 	"github.com/gofrs/uuid"
 	"github.com/sirupsen/logrus"
 	"middleware/example/internal/models"
-	"middleware/example/internal/services/collections"
+	"middleware/example/internal/services/ratings"
 	"net/http"
 )
 
-// GetCollection
-// @Tags         collections
-// @Summary      Get a collection.
-// @Description  Get a collection.
-// @Param        id           	path      string  true  "Collection UUID formatted ID"
-// @Success      200            {object}  models.Collection
+// GetRating
+// @Tags         ratings
+// @Summary      Get a rating.
+// @Description  Get a rating.
+// @Param        id           	path      string  true  "Rating UUID formatted ID"
+// @Success      200            {object}  models.Rating
 // @Failure      422            "Cannot parse id"
 // @Failure      500            "Something went wrong"
-// @Router       /collections/{id} [get]
-func GetCollection(w http.ResponseWriter, r *http.Request) {
+// @Router       /ratings/{id} [get]
+func GetRating(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	collectionId, _ := ctx.Value("collectionId").(uuid.UUID)
+	ratingId, _ := ctx.Value("ratingId").(uuid.UUID)
 
-	collection, err := collections.GetCollectionById(collectionId)
+	rating, err := ratings.GetRatingById(ratingId)
 	if err != nil {
 		logrus.Errorf("error : %s", err.Error())
 		customError, isCustom := err.(*models.CustomError)
@@ -37,7 +37,7 @@ func GetCollection(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusOK)
-	body, _ := json.Marshal(collection)
+	body, _ := json.Marshal(rating)
 	_, _ = w.Write(body)
 	return
 }
