# Ratings/internal/models/models.go
@@ -4,7 +4,7 @@ import (
 	"github.com/gofrs/uuid"
 )
 
-type Collection struct {
+type Rating struct {
 	Id      *uuid.UUID `json:"id"`
 	Content string     `json:"content"`
 }
